--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -2,7 +2,7 @@
 @import "~bulma/sass/utilities/_all";
 
 // Set your colors
-$primary: red;
+$primary: #568ea6;
 $primary-invert: findColorInvert($primary);
 $twitter: #4099ff;
 $twitter-invert: findColorInvert($twitter);
