feito report problem

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -6,6 +6,8 @@ $primary: #305f72;
 $primary-invert: findColorInvert($primary);
 $info: #568ea6;
 $info-invert: findColorInvert($info);
+$white: #fafafa;
+$white-invert: findColorInvert($white);
 $accent: #f18c8e;
 $accent-invert: findColorInvert($accent);
 $twitter: #4099ff;
